--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "˹𝐐ᴜᴇᴇɴ 𝗢𝗙𝗙 𝐌ᴜsɪᴄ˼ ♪",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://graph.org/file/ab71c8ccc97640412388c.jpg",
+    "logo": "https://telegra.ph/file/ed0b0c4bdba0e5edae53c.jpg",
     "keywords": [
     "python3",
     "telegram",
