--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "˹𝐐ᴜᴇᴇɴ 𝗢𝗙𝗙 𝐌ᴜsɪᴄ˼ ♪",
+    "name": "SHUKLA-MUSIC",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "https://telegra.ph/file/ed0b0c4bdba0e5edae53c.jpg",
     "keywords": [
