--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "SHUKLA-MUSIC",
+    "name": "T_Y-MUSIC",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/ed0b0c4bdba0e5edae53c.jpg",
+    "logo": "https://mallucampaign.in/images/img_1718710206.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -14,27 +14,27 @@
     "env": {
       "API_ID": {
         "description": "Get this value from https://my.telegram.org",
-        "value": "",
+        "value": "29426486",
         "required": true
       },
       "API_HASH": {
         "description": "Get this value from https://my.telegram.org",
-        "value": "",
+        "value": "d71ad4ec048ab41677a1a439b21ff0c9",
         "required": true
       },
       "BOT_TOKEN": {
         "description": "A Bot's token from Botfather",
-        "value": "",
+        "value": "6965255627:AAGHAspJSX01m1vaKfp6faZdWRJg-hDQtKg",
         "required": true
       },
       "MONGO_DB_URI": {
         "description": "Get a mongodb url from https://cloud.mongodb.com.",
-        "value": "",
+        "value": "mongodb+srv://hassanaliarain406:Vl8FypcwIbj5ElKA@cluster0.5syj88e.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
         "required": true
       },
       "OWNER_ID": {
         "description": "The user id of user whom you would like to add as OWNER.",
-        "value": "",
+        "value": "5976437467",
         "required": true
       },
       "STRING_SESSION": {
